tests/data/php/shouldfail/ScalarParamWithoutParamAnnotation.php
<?php
/**
 * @package Foo
 */ 
class Bar {
    
    /**
     * Some method
     *
     * @param bool $other
     * 
     */
    public function foo( FooBar $other, $string ) {}
    
}
